public/css/common.css
/* public/css/common.css */

body {
  padding: 1em;
}

nav {
  margin-top: 1em;
  margin-bottom: 1em;
}

.table thead th {
  position: sticky;
  top: 0;
  z-index: 2; /* keep above rows */
}

a {
  text-decoration: underline;
}

.tag:hover {
  cursor: default;
}

.service-vulnerability-keys {
  max-width: 15em;
}

.has-tooltip::before,
.has-tooltip::after,
.has-tooltip-bottom::before,
.has-tooltip-bottom::after,
.has-tooltip-right::before,
.has-tooltip-right::after,
.has-tooltip-left::before,
.has-tooltip-left::after {
  z-index: 9999 !important;
}

